style.css
.about_page{
	background: rgb(230,241,253); 
    padding-top: 65px;
    padding-bottom: 60px;
    border-bottom: gray solid 1px;
    font-family: fantasy;
}

.about_para{
	margin-top: 75px;

}

.port_page{
	background: rgb(247,247,249);
    margin-left: -16px;
    margin-right: -15px;
    padding-bottom: 25px;
    border-bottom: solid gray 1px;
}

.port_text p{
	text-align: center;
    font-size: 45px;
    font-family: cursive;
    color: gray;
    padding-top: 45px;
    padding-bottom: 30px;
}

